k8s/backend-deployment.yaml
# k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: voda-monster-backend
  namespace: work-projects-voda-monster
spec:
  replicas: 1
  selector:
    matchLabels:
      app: voda-monster-backend
  template:
    metadata:
      labels:
        app: voda-monster-backend
    spec:
      imagePullSecrets:
        - name: registry-pull-secret
      
      containers:
        # 3. КОНТЕЙНЕР PHP-FPM
        - name: php-fpm
          image: registry.goodwin.website/water-delivery-backend
          ports:
            - containerPort: 9000
          volumeMounts:
            - name: app-code
              mountPath: /var/www/html # Тут и код, и уже готовый кэш
          resources:
            limits: { cpu: "500m", memory: "512Mi" }
            requests: { cpu: "200m", memory: "256Mi" }
          readinessProbe:
            exec:
              command: ["cgi-fcgi", "-bind", "-connect", "127.0.0.1:9000"]
            initialDelaySeconds: 5

        # 4. КОНТЕЙНЕР NGINX (Sidecar)
        - name: nginx
          image: nginx:alpine
          ports:
            - containerPort: 80
          volumeMounts:
            - name: nginx-conf
              mountPath: /etc/nginx/conf.d/default.conf
              subPath: default.conf
            - name: app-code
              mountPath: /var/www/html
          resources:
            limits: { cpu: "200m", memory: "128Mi" }
            requests: { cpu: "100m", memory: "64Mi" }
      
      volumes:
        - name: nginx-conf
          configMap:
            name: nginx-config
        - name: app-code
          emptyDir: {}
