k8s/service.yaml
# k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: voda-monster-backend-svc
  namespace: work-projects-voda-monster
spec:
  selector:
    app: voda-monster-backend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
